--- a/package.json
+++ b/package.json
@@ -9,19 +9,34 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/huggingface": "^0.0.4",
+    "@ai-sdk/openai": "^2.0.50",
+    "@ai-sdk/react": "^2.0.68",
+    "@rainbow-me/rainbowkit": "^2.2.8",
+    "@tanstack/react-query": "^5.90.2",
+    "@vercel/og": "^0.8.5",
+    "@wagmi/core": "^2.22.0",
+    "ai": "^5.0.68",
+    "connectors": "^1.0.0",
+    "ethers": "^6.15.0",
+    "next": "15.5.4",
+    "openai": "^6.3.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "sonner": "^2.0.7",
+    "viem": "2.x",
+    "wagmi": "^2.18.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
